--- a/style.css
+++ b/style.css
@@ -77,9 +77,10 @@ header {
     text-align: center;
 }
 .logo-img{
-    display: flex;
+   
     align-items: start;
-    margin-left: -40px;
+    margin-left: 0px;
+    
 }
 
 .hero h2 {
@@ -217,17 +218,49 @@ footer {
   height: auto;    /* keeps ratio */
   max-width: 100%;
 }
-
+/* 
 /* Tablet */
-@media (max-width: 768px) {
+/* @media (max-width: 500px) {
   .logo-img {
     width: 50px;
   }
-}
+} */
 
 /* Mobile */
-@media (max-width: 528px) {
+/* @media (max-width: 500px) {
   .logo-img {
     width: 30px;
+  }
+} */ 
+
+/* ===== MOBILE / TABLET MENU ===== */
+.menu-toggle {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: #000;
+}
+
+/* Tablet & Mobile */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+
+  .nav-links {
+    position: absolute;
+    top: 80px;
+    right: 0;
+    background: white;
+    flex-direction: column;
+    width: 220px;
+    padding: 20px;
+    gap: 15px;
+    display: none;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  }
+
+  .nav-links.active {
+    display: flex;
   }
 }
